<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MSC_TestSession8</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="preference_Settings">Settings</string>
    <string name="settings_Order">Tasks Order</string>
    <string name="settings_OrderSummary">Ascending</string>
    <string name="settings_Alarm">Alarm</string>
    <string name="settings_AlarmSummary">Never</string>
    <string name="key1">key1</string>
    <string name="key2">key2</string>

    <string-array name="alarmLabels">
        <item>Never</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>30 min</item>
    </string-array>
    <string-array name="alarmValues">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
    </string-array>

    <string name="preference_About">About</string>
    <string name="preference_PrivacyPolicy">Privacy Policy</string>
    <string name="preference_EULA">Device-specific EULA</string>
    <string name="title_activity_activity_main">ActivityMain</string>
    <string name="title_activity_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_activity_eul">End User License Agreement</string>
    <string name="menu_btnAutor">Authors</string>
    <string name="menu_btnLibros">Books</string>
    <string name="menu_btnConsulta">Search</string>
    <string name="autor_txtId">Id</string>
    <string name="autor_txtNombre">Name</string>
    <string name="autor_txtFechaNac">Birth Date</string>
    <string name="autor_txtExtra">Extra Info</string>
    <string name="btnGuardar">Save</string>
    <string name="btnActualizar">Update</string>
    <string name="btnBorrar">Delete</string>
    <string name="btnNuevo">New</string>
    <string name="btnLoad">Load</string>
    <string name="autor_RecordNotValid">Author must contain all fields</string>
    <string name="autor_RecordValid">Author saved successfully</string>
    <string name="autor_RecordDuplicated">Author ID already exist</string>
    <string name="autor_RecordNotFound">Author was not found</string>
    <string name="autor_IdNotNumeric">ID must be integer</string>
    <string name="autor_EraseAutor">Are you sure to delete this record?</string>
    <string name="autor_EraseAutorPositive">Ok</string>
    <string name="autor_EraseAutorNegative">Cancel</string>
    <string name="libro_RecordNotValid">Book must contain all fields</string>
    <string name="libro_txtPublicacion">Publish</string>

    <string name="spinner_opcion">Select an Item</string>
    <string name="spinner_autor">Select an Author</string>
    <string name="spinner_editorial">Select an Editorial</string>
    <string name="spinner_pais">Select a Country</string>
    <string name="spinner_lenguaje">Select a Language</string>

    <string-array name="arrPaises">
        <item>Germany</item>
        <item>Spain</item>
        <item>United States</item>
        <item>England</item>
        <item>Mexico</item>
    </string-array>

    <string-array name="arrLenguajes">
        <item>Spanish</item>
        <item>English</item>
        <item>French</item>
        <item>Dutch</item>
        <item>Japanese</item>
    </string-array>

</resources>
